--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -782,3 +782,268 @@
     60min：
     
     问了一些岗位相关问题
+    
+    
+# 抖音面试
+    作者：__椰子皮__
+    链接：https://www.nowcoder.com/discuss/456225
+    来源：牛客网
+    
+    字节跳动抖音三轮面试
+    
+    第一轮：
+    
+    影响一个Http服务最大连接数的因素是什么
+    
+    一台服务器如何辨认一个请求是谁发送的
+    
+    如何进行Token认证
+    
+    说一下cookie，为什么要有cookie，cookie中放什么，cookie与session的区别
+    
+    Https是什么，建立连接的过程
+    
+    算法题：给出一个n*n数字矩阵，寻找一条最长上升路径（数字越来越大），每个位置只能向上下左右四个位置移动
+    
+    智力题：2n个人围成一圈，两两握手，形成n条线段，线段没有交点。 一共多少种握手方式？
+    
+    问答题都是计算机网络，算法题很快写完而且测试通过，智力题也很快做出，5分钟后二面。
+    
+    第二轮：
+    
+    说说你所知道的Java中线程安全的集合类
+    
+    Java中有什么办法使对象在各线程中隔离
+    
+    说一下ThreadLocal是什么，如何实现的
+    
+    Redis为什么速度快，多路复用讲一下
+    
+    项目中为什么用ES，ES在超大数据量下如何优化
+    
+    操作系统的分页存储，地址转换
+    
+    概率题：两人抛硬币，抛到正面的人获胜，问先抛的人获胜的概率
+    
+    算法题：给定一个非空二叉树，返回其最大路径和。
+    
+# 字节data面经
+    作者：__椰子皮__
+    链接：https://www.nowcoder.com/discuss/471877?source_id=profile_create&channel=1013
+    来源：牛客网
+    
+    SpringBoot相对于Spring的优势在哪
+    
+    Spring中的依赖注入是如何实现的，实现的原理是什么
+    
+    Spring中运用了哪些设计模式
+    
+    说一说自动拆装箱是如何实现的，是在编译期还是在运行时
+    
+    深入问了一下Redis实现分布式锁（简历上写了），主从问题，脑裂问题，Redis能否解决脑裂
+    
+    计算机网络：三次握手如果第三次的ACK丢了会怎样
+    
+    堆和栈的区别，都会出现哪些异常，JVM中栈的默认大小，如何设置
+    
+    JVM中的常量池放在哪，元空间和永久代
+    
+    JVM问题的排查工工具
+    
+    算法：已知一棵二叉树，如果选择一个节点，则不能选择与之有连边的节点，那么最多能选择多少个节点
+    
+    第一面面试官态度很好，而且英文特别好，问题很有深度，好多问题都会让我去思考用到的设计模式
+    
+    5分钟后二面，二面面试官比较忙，没有开视频
+    
+    一个视频传输和存储的编码有什么不同（不会...）
+    
+    聊了聊项目，项目规模大概如何，你所做的工作有哪些价值（答的不好，实习生做的业务不够核心）
+    
+    说一说你为什么用ActiveMQ，消息队列如何保证可靠
+    
+    消息队列如何保证不丢，你们是怎么做的
+    
+    ActiveMQ用LevelDB如何实现集群（不会...）
+    
+    算法：给出两个字符串，求最短编辑距离（Leetcode原题，要是之前没做过我估计当场我肯定不会）
+    
+    算法：上面在求出最短编辑距离的同时，给出编辑的过程
+    
+    计算机组成原理：计算机由哪些部分组成，32位操作系统内存大小
+    
+    一个编译原理的问题，完全不会...
+    
+    路由器和交换机的区别
+    
+    会不会机器学习，你的未来打算
+    
+    这一面好多不会的，面试官的问题真的很底层，估计评价不高，但竟然过了
+    
+    8月6日三面
+    
+    因为上次三面挂了，这次特别紧张，但面试官人很好，首先活跃了以下气氛，问我之前的三面为什么挂，这段时间有什么提高，你觉得自己前两面表现的怎么样。
+    
+    对比一下SpringBoot和SpringMVC
+    
+    设计题：如果你自己实现一个MVC框架，你会如何实现
+    
+    写个伪代码：如何把请求的url映射到Controller层方法上（这个写的不好，面试官说写的太死了，框架不会这么实现的，但也没为难）
+    
+    写个SQL，统计全中国重名最多的十个名字
+    
+    数据库的分表，排序查询的优化，你做过哪些数据库的优化
+    
+    实习用到的RPC框架是什么，序列化方式有哪些，hessian，JDK原生，JSON，Protobuf对比
+    
+    InnoDB与MySLAM的区别，你还知道哪些存储引擎
+    
+    你知道哪些Java虚拟机
+    
+    如果你的用户反应页面刷不出来你会如何排查
+    
+    算法题：判断一个树是否为二叉搜索树（不要中序遍历看是否递增那种方法）
+    
+    你还会哪些语言，能来实习吗
+    
+ # shopee一面
+     作者：as_
+    链接：https://www.nowcoder.com/discuss/487858?type=2&order=3&pos=4&page=1&channel=1013&source_id=discuss_tag
+    来源：牛客网
+    
+    一面
+    1.自我介绍(讲了一下项目还没讲几句就被打断了 看起来不感兴趣的样子😂)
+    2.java集合 set list map区别
+    3.arraylist与linkedlist区别
+    4.hashmap treemap区别
+    5.哈希表搜索插入的时间复杂度
+    6.二叉树需要是有序的吗
+    7.二叉树搜索插入的时间复杂度
+    8.堆和栈的区别 new一个对象放在哪里 为什么不能放在栈里
+    9.数据库索引数据结构
+    10.B+树与二叉树区别 优点
+    11.B+树查找 插入时间复杂度
+    12.数据库事务 有哪些特征 最核心的是哪一个
+    13.事务A 读取数据库中某个数据 值为2 这时候事务B把这个值修改为3再提交 然后事务A再次读取这个值，读到的值是多少
+    14.事务A读取某个数据库表 读到了3条数据 这时候事务B插入了一条数据再提交 然后事务A再次读取这个数据库表，读到的数据有多少条
+    15.数据库表的设计需要注意什么
+    16.三大范式是为了解决什么问题，不遵循三大范式会有什么副作用
+    17.乐观锁与悲观锁的区别 什么时候用乐观锁 什么时候用悲观锁
+    18.CAS属于乐观锁还是悲观锁
+    19.自旋锁属于乐观锁还是悲观锁
+    20.乐观锁的本质是什么 用一句话概括与悲观锁的区别
+    21.计算机网络七层结构
+    22.以太网属于哪一层
+    23.json协议属于哪一层(会话层表示层应用层中的哪一层)(确认了好几次没听错 json协议是什么鬼😓)
+    24.tcp udp协议属于哪一层
+    25.tcp udp的区别 面向连接的本质是什么
+    26.tcp三次握手为什么不能两次或者四次
+    27.手撕代码 合并有序链表(写了一个不是最优解的 吐槽了两句hhh)
+    
+    作者：TDrunk
+    链接：https://www.nowcoder.com/discuss/487769?type=2&order=3&pos=5&page=0&channel=1013&source_id=discuss_tag
+    来源：牛客网
+    
+    数据结构和算法：
+    1、说下所有排序算法
+    2、快排具体实现，最差情况下时间复杂度，什么情况是最差情况
+    java：
+    1、hashmap的实现，怎么扩容的
+    2、hashmap解决冲突的为什么用红黑树不用二叉平衡树
+    数据库：
+    1、解释下聚簇索引和非聚簇索引
+    2、Innodb的索引情况
+    3、如果有abc联合索引，只查c会怎样，只查ac会怎样，为什么
+    4、联合索引底层结构
+    5、为什么索引用b+树不用二叉树
+    6、非聚簇索引会查几次
+    redis:
+    1、数据类型
+    2、zset和list使用上的区别
+    3、zset底层结构，如何实现范围查找
+    操作系统：
+    1、协程
+    2、解释虚拟内存
+    3、缺页中断
+    4、linux的几个命令
+    网络：
+    1、tcp三次握手之后如果客户端断网了怎么办
+    2、http长短连接
+    3、tcp长连接
+    其他：
+    1、登陆如何保存状态
+    2、token怎么保证安全
+    3、restful了解么
+    4、加密算法说几个
+    5、rsa是对称还是非对称
+    6、sql注入
+    
+# shopee 一 二面
+    作者：在风口吹头的猪
+    链接：https://www.nowcoder.com/discuss/487308?type=2&order=3&pos=12&page=1&channel=1013&source_id=discuss_tag
+    来源：牛客网
+    
+    一面
+    项目相关
+    介绍了一下项目
+    怎么避免线程空转的
+    epoll和select和poll
+    什么是线程安全，怎么做到线程安全
+    数据结构&&操作系统&&网络
+    这几个方面都不多，写在一起吧
+    
+    数组和链表不同
+    set和unordered_set的底层
+    具体说说哈希表
+    什么是堆，堆排序
+    进程通信方式
+    虚拟地址的好处
+    什么是缺页异常
+    三次握手四次挥手
+    time_wait状态在哪里
+    https过程
+    数据库
+    mysql的存储引擎
+    索引的数据结构
+    创建索引要考虑什么问题，例如索引越多越好吗（索引的维护需要时间空间不是越多越好，要考虑哪些列常被用来做条件，考虑联合索引的最左匹配，非聚簇索引可以用覆盖索引）
+    redis的五种基本数据结构
+    说出redis的10个命令（我就憋了几个，不到10个，他估计也看透了我水平了）
+    redis的过期策略（有lru还有随机吧）
+    lru是属于主动过期还是被动过期（这啥啊，我不会……）
+    做题
+    小case，写的挺快的，面试官可能觉得我编程题还可以才给过的吧，毕竟我数据库那块那么烂……
+    
+    合并链表
+    最长不重复子串
+    二面
+    项目
+    （一见面就夸我项目经验多）介绍了后台和安卓两个项目
+    reactor模式介绍
+    使用多路复用和普通的方式对比有什么好处（一个线程能维护多个连接，减少线程数）
+    使用多路复用的话怎么做到快速响应一个连接上的事件（非阻塞io，耗时任务丢给计算线程）
+    非阻塞io和阻塞io区别
+    网络
+    tcp和udp的不同
+    tcp怎么处理丢包的问题的（ack，超时重传，接收缓冲，快重传）
+    如果接收方发了重复ack了，但是对方一直没有回应会怎样（不知道，我说可能就丢弃接收缓冲的数据了）
+    知道一个域名，怎么和他通信（dns，ip，路由）
+    http除了常用的get和post还有什么方法
+    说了一个广播造成的问题问怎么解决，我想了一会才反应过来是广播风暴，我说我只记得可以用“生成树协议”
+    A要用到B服务器的服务，开了多个连接，但是只有一小部分连接成功了，怎么排查原因（我说可以用netstat查看一下两端的连接状态，比如可以判断B是否被SYN攻击了，还是单纯网络问题。 另外也可能B端的文件描述符用完了，他表示能想到文件描述符这个层面很好）
+    数据库
+    索引的数据结构，与B树的区别
+    事务的特性
+    原子性怎么实现（undo log做回滚）
+    undo log什么情况会执行（崩溃重启）
+    那重启时怎么判断是要做undo log还是redo log（不会……）
+    隔离级别说一下
+    和隔离级别对应的有三个问题说一下
+    那隔离级别是怎么实现的（我说用锁，但是具体用什么锁怎么用我忘了）
+    了解redis那其他的中间件例如*￥%￥#，#￥#%，H%454……有了解的吗（有一两个大概知道做什么的但是确实不了解）
+    微服务呢（我了解个概念吧……）
+    智力题
+    本来已经结束了，结果我问他这轮怎么没写代码，他说你要的话我出几道题，口述即可
+    
+    检测链表是否有环
+    圆形棋盘下棋，最后一个放的赢，问先手策略
+    2个玻璃球100层楼问题，没想到最优，只想到2分
