--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -132,3 +132,76 @@
  
 - 什么情况会导致cpu占用过高？
     - 除了计算密集型之外，while死循环
+    
+- String a = new String("abc")到得产生了几个对象  
+    - https://blog.csdn.net/Mypromise_TFS/article/details/81504137
+    - 1个或者俩个，如果常量池中没有，则在常量池中创建一个此对象，然后堆中再创建一个这个对象。
+    
+- mysql查询是怎么执行的？
+    - https://mp.weixin.qq.com/s?__biz=Mzg2OTA0Njk0OA==&mid=2247485097&idx=1&sn=84c89da477b1338bdf3e9fcd65514ac1&chksm=cea24962f9d5c074d8d3ff1ab04ee8f0d6486e3d015cfd783503685986485c11738ccb542ba7&token=79317275&lang=zh_CN%23rd
+    
+    - SQL 等执行过程分为两类，一类对于查询等过程如下：权限校验---》查询缓存---》分析器---》优化器---》权限校验---》执行器---》引擎
+    - 对于更新等语句执行流程如下：分析器----》权限校验----》执行器---》引擎---redo log prepare---》binlog---》redo log commit
+    
+- 数据库连接池
+    - 不使用连接池，每次执行一次sql都需要 tcp三次握手，mysql认证的三次握手，执行sql，mysql的关闭，tcp四次挥手。
+    使用连接池，第一次访问需要创建连接，但之后的访问，都是复用之前的连接。
+    
+- ping是TCP还是UDP
+    - ping应该是属于osi七层模型中的应用层。
+ping命令使用的tcp报文还是udp报文呢？
+        - 答：ping命令使用的是ICMP报文，ICMP报文封装在ip包里。ICMP协议也是tcp/ip协议族中的一个子协议，所以从这一层来看，icmp报文和tcp报文，udp报文是同一个级别。所以ping命令使用的报文既不是tcp报文也不是udp报文。
+    - 但是ICMP 跟TCP和UDP没有归属关系，ICMP位于传输层之下，属网络层。用的IP报头。
+        - TCP/UDP 在第四层：传输层
+        - IP/ICMP 在第三层：网络层
+
+- 接受数据包的流程？
+    - 网卡收到数据包。
+    - 将数据包从网卡硬件缓存转移到服务器内存中。
+    - 通知内核处理。
+    - 经过TCP/IP协议逐层处理。
+    - 应用程序通过read()从socket buffer读取数据。
+    
+- 怎么压缩数字？比如一个整型int值 占四个字节 ，怎么进行压缩变成少于四个字节。
+    - zigzag https://blog.csdn.net/zgwangbo/article/details/51590186
+
+- 不同进程可不可以使用同一个端口？
+    - 不可以，比如我们socket编程的时候，起俩进程bind一个端口就说端口已占用。
+
+    - ps：如果进程先绑定一个端口号，然后在fork一个子进程，这样的话就可以是实现多个进程绑定一个端口号，但是两个不同的进程绑定同一个端口号是不可以的
+    
+- tcp udp可以bind同一个端口吗？
+    - 可以
+    - 由于TCP/IP传输层的两个协议TCP和UDP是完全独立的两个软件模块，因此各自的端口号也相互独立，如TCP有一个255号端口，UDP也可以有一个255号端口
+    - https://www.jianshu.com/p/df9e55e94f95
+    
+- socket, 端口，进程的关系？
+    - https://www.jianshu.com/p/ed39c81d081b
+    
+    - 一个socket就是一个连接，tcp或者udp
+    - 每个socket连接，都是需要指定端口的 4元组 唯一标识了一个连接
+    - 一个进程可以有多个socket
+    - netstat -aon|findstr 80 找到占用80端口的连接
+    - tasklist|findstr 16176 找到 pid为16176的进程
+
+- 内核是如何将数据包转发至 socket 的呢？
+    - 网络数据首先到达网卡，然后进入内核，由网络协议栈去处理，那么内核是如何进行数据分发的呢？它怎么知道该如何把数据交给特定的用户进程呢？
+    这时，就需要 socket 发挥作用了！
+    socket 中存储了特定的四元组： 源ip+port，目的ip+port；
+        - 1> bind 到特定 ip 和 port 的socket 对应 [src ip, src port) <=> (*, *)] ；
+        - 2> connect 到特定目的ip+port 的 socket 对应 [src ip, src port) <=> (dst ip,  dst port)]；
+        - 3> accept 返回了的 socket 对应  [src ip, src port) <=> (dst ip,  dst port)]；
+    - 那么内核根据数据包的四元组信息，就可以锁定特定的socket了。并可，系统中所有 socket 中的四元组信息，必定唯一，不可能重复！
+    - socket 的本质是一种资源，它包含了端到端的四元组信息，用来标识数据包的归属。因此，尽管 tcp 协议的端口号只有 65535 个，但是进程可拥有的 socket 数据却不限于此（受限于进程最大文件描述符数据）；
+
+- 进程，socket的一些linux命令
+    - https://www.cnblogs.com/allenblogs/archive/2011/05/19/2051117.html
+    
+- 影响一个http连接数的最大因素是什么？
+    - 文件句柄 socket连接数
+- 一台服务器如何辨认一个请求是谁发送的？
+    - cookie session
+    
+- 写个SQL，统计全中国重名最多的十个名字？
+
+- wait notify原理
