--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -1047,3 +1047,87 @@
     检测链表是否有环
     圆形棋盘下棋，最后一个放的赢，问先手策略
     2个玻璃球100层楼问题，没想到最优，只想到2分
+    
+# 字节 shopee 微信面经
+https://blog.csdn.net/alexkx/article/details/107385113
+
+# shopee
+    作者：牛客77286144号
+    链接：https://www.nowcoder.com/discuss/472138?type=2&order=3&pos=65&page=1&source_id=discuss_tag&channel=1013
+    来源：牛客网
+    
+    一面
+    
+    
+    linux常用命令 ls ps kill mkdir chmod
+    
+    
+    操作系统
+    
+    进程与线程
+    
+    进程同步方式
+    
+    死锁
+    
+    死锁解决方案
+    
+    
+    网络
+    
+    header包含的信息
+    
+    Https加密过程 为什么2+1
+    
+    
+    数据结构
+    
+    数组与链表
+    
+    哈希过程
+    
+    如何保证hash离散性
+    
+    HashMap
+    
+    算法：找链表倒数第k个节点
+    
+    
+    数据库
+    
+    数据库引擎
+    
+    InnoDB和MyISAM区别
+    
+    事务隔离级别，产生的问题
+    
+    隔离级别的实现（读写锁：共享锁、互斥锁）
+    
+    乐观锁、悲观锁
+    
+    联合索引 索引生效失效判定
+    
+    Sql走索引的判断
+    
+    
+    谈谈对分布式的理解
+    
+    CAP原则
+    
+    分布式事务一致性（不会）
+    
+    
+    二面
+    
+    怼项目
+    
+    设计文件储存系统
+    
+    聊天
+    
+    offer情况
+    
+    反问
+    
+- shopee新加坡 1-3面
+    - https://www.nowcoder.com/discuss/484354?channel=-2&source_id=discuss_terminal_discuss_sim
