--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -205,3 +205,14 @@ ping命令使用的tcp报文还是udp报文呢？
 - 写个SQL，统计全中国重名最多的十个名字？
 
 - wait notify原理
+
+- 僵尸进程与孤儿进程
+    - 即子进程先于父进程退出后，子进程的PCB需要其父进程释放，但是父进程并没有释放子进程的PCB，这样的子进程就称为僵尸进程，僵尸进程实际上是一个已经死掉的进程。
+    - 一个父进程退出，而它的一个或多个子进程还在运行，那么那些子进程将成为孤儿进程。孤儿进程将被init进程(进程号为1)所收养，并由init进程对它们完成状态收集工作。
+    
+- 内核态切换到用户态
+    - 内核态程序执行完毕时如果要从内核态返回用户态，可以通过执行指令iret来完成，指令iret会将先前压栈的进入内核态前的cs,eip,eflags,ss,esp信息从栈里弹出，加载到各个对应的寄存器中，重新开始执行用户态的程序，这个过程不再详述。
+
+- epoll为什么用红黑树？
+    - 对搜索效率要求高，并且频繁的插入删除，红黑树就很好。
+    - 为什么不用哈希，数量一大，哈希冲突
