--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -216,3 +216,20 @@ ping命令使用的tcp报文还是udp报文呢？
 - epoll为什么用红黑树？
     - 对搜索效率要求高，并且频繁的插入删除，红黑树就很好。
     - 为什么不用哈希，数量一大，哈希冲突
+    
+- 两个进程打开同一个文件，一个进程会一行一行的读，另一个进程将文件truncate或者清空，那么第一个进程能否感知到？
+    - 互不影响的，两个进程有不同的文件表，每个进程有自己文件的当前位置。
+    
+- 程序在cpu中的执行过程？
+    - https://blog.csdn.net/hunter___/article/details/82906540
+    - 程序编译好后，存于某个地方（外存），
+    当程序被要求运行时，做的事情如下：
+   
+        - 1.把可执行程序相关数据代码等加载到内存的相应段？
+    
+        - 2.等待cpu调度到此程序，也即是获取cpu的使用权
+    
+        - 3.运行balabala...
+        
+- cpu L1， L2， L3缓存
+    - https://blog.csdn.net/myxmu/article/details/17021975
