--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -233,3 +233,14 @@ ping命令使用的tcp报文还是udp报文呢？
         
 - cpu L1， L2， L3缓存
     - https://blog.csdn.net/myxmu/article/details/17021975
+
+- 内存碎片如何解决？
+    - 分页分段来解决内存碎片
+    
+    - https://blog.csdn.net/csdn_kou/article/details/82891141
+    - 内存碎片通常分为内部碎片和外部碎片：
+        - 1.内部碎片是由于采用固定大小的内存分区，当一个进程不能完全使用分给它的固定内存区域时就产生了内部碎片，通常内部碎片难以完全避免；
+        - 2.外部碎片是由于某些未分配的连续内存区域太小，以至于不能满足任意进程的内存分配请求，从而不能被进程利用的内存区域。
+        
+        - 现在普遍采用的段页式内存分配方式就是将进程的内存区域分为不同的段，然后将每一段由多个固定大小的页组成。通过页表机制，使段内的页可以不必连续处于同一内存区域，从而减少了外部碎片，然而同一页内仍然可能存在少量的内部碎片，只是一页的内存空间本就较小，从而使可能存在的内部碎片也较少。
+
