--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -244,3 +244,5 @@ ping命令使用的tcp报文还是udp报文呢？
         
         - 现在普遍采用的段页式内存分配方式就是将进程的内存区域分为不同的段，然后将每一段由多个固定大小的页组成。通过页表机制，使段内的页可以不必连续处于同一内存区域，从而减少了外部碎片，然而同一页内仍然可能存在少量的内部碎片，只是一页的内存空间本就较小，从而使可能存在的内部碎片也较少。
 
+- 为什么程序不读入内存就无法运行？
+    - 因为负责解析和运行程序内容的cpu是通过程序计数器来指定内存地址从而读出程序指令的。
