--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -1525,3 +1525,39 @@ https://blog.csdn.net/alexkx/article/details/107385113
     指令重排会带来什么问题？
     
     你有什么想要向我了解的吗？
+    
+# 腾讯pcg 1-3面
+    - https://www.nowcoder.com/discuss/489098?type=2&order=3&pos=66&page=1&source_id=discuss_tag&channel=1013
+    作者：AmazingM
+    链接：https://www.nowcoder.com/discuss/475897?source_id=profile_create&channel=1013
+    来源：牛客网
+    
+    自我介绍
+    哪个项目你最匹配我们的工作，介绍一下
+    我看你这个网站访问时间很长，时间消耗都在哪里
+    网站里有用多线程吗？怎么保证子线程结束后再结束总线程？代码如何实现？
+    怎么提升网站的访问速度？具体怎么处理？
+    网站安全性怎么保证？
+    网站为什么没有用域名而是用的ip
+    htttps怎么工作的？加密和认证过程了解吗？
+    Linux的top命令都可以查看哪些内容？
+    进程和线程的区别？
+    进程和线程切换的时候有什么区别？
+    数据库用过哪些？
+    mysql和redis的区别
+    myisam和innodb的区别
+    redis的数据类型
+    哪个数据类型有用跳表实现？
+    mysql和redis能进行分布式存储吗？
+    mysql怎么做容灾备份？
+    TCP和UDP的区别
+    三次握手
+    泛洪攻击及解决方法
+    四次挥手
+    Time_wait
+    TCP的可靠性
+    拥塞控制时怎么判断网络出现了拥塞
+    在传输视频是使用UDP而不是TCP，为什么快？
+    代码题：
+    求字符串的最长不包含重复字符的子串
+    有100个文件，每个文件有5000万行qq号，每个文件可能包含重复的qq号。根据优先级去重，所谓优先级去重的意思就是：优先级高的文件的qq号全部保留，优先级低的文件会去掉已经在优先级高的文件中的重复的qq号。最后返回去重后的100个文件。重点关注如何处理海量数据，防止内存不够。
