--- a/docs/牛客上的面经.md
+++ b/docs/牛客上的面经.md
@@ -1561,3 +1561,49 @@ https://blog.csdn.net/alexkx/article/details/107385113
     代码题：
     求字符串的最长不包含重复字符的子串
     有100个文件，每个文件有5000万行qq号，每个文件可能包含重复的qq号。根据优先级去重，所谓优先级去重的意思就是：优先级高的文件的qq号全部保留，优先级低的文件会去掉已经在优先级高的文件中的重复的qq号。最后返回去重后的100个文件。重点关注如何处理海量数据，防止内存不够。
+    
+# 腾讯pcg社招直播面经
+    作者：fongfiafia
+    链接：https://www.nowcoder.com/discuss/490951?type=2&order=3&pos=61&page=0&source_id=discuss_tag&channel=1013
+    来源：牛客网
+    
+    今天面试了PCG直播中台，这里分享一下，并且记录一下问题，后续需要学习。背景：3年工作经验，1年java经验（别问，问就是转行。。）。另外此岗位需要转go语言
+    1、说一下hashmap
+    2、如果发生了hash冲突怎么办？（hashmap相当于是用了链地址法，还有其他方法，比如再hash，公共溢出区，开放地址法）
+    3、concurrentHashmap的实现
+    4、为什么1.8中concurrentHashmap不用segment了
+    5、线程池怎么实现复用线程的
+    6、多个核心线程去take阻塞队列中线程，谁能拿到了？（会答不上来，估计是CSA自旋抢夺吧。。）
+    7、线程池中的线程为什么不会被GC回收（我回答被线程池引用了，所有不会被GC，应该是这样。）
+    8、只重写hashcode，不重写equals会有什么问题，equals本质是什么
+    9、说一下TCP，为什么3次握手，为什么是安全的？我说了他的一些机制快速重传，快速回复，拥塞机制等等，面试官让我一一说明。
+    10、为什么udp不安全还要用呢？我说传输快，对于要求实时性的传输就可以用？
+    11、为什么视频用udp传输，丢了1，2帧没什么问题？ 这个我扯到了屏幕的刷新率和人眼的识别频率。。面试官说也行吧。。过后去百度一下。
+    12、https说一下工作过程
+    13、说一下http报文结构，这个没记过。。
+    14、说一下get和post区别，我说了一个在url上体现，一个没有，面试官说还有吗，回答不上来。（get的请求附着在url上，post请求数据是在包体中）
+    15、说一下状态码（100 请继续 200 成功，301 永久重定向，500 服务器内部错误，404 找不到资源）
+    16、https就一定是安全的吗？我说不是对于比如跨域攻击和xss脚本攻击就没办法，接着问这两种网络安全你说一下。
+    17、用java来做socket链接，过程是怎么样的？这个我是真的没搞过，但是之前看过一点，但是回答的不太ok。
+    18、accept()做了哪些事情？
+    18、tcp是二进制传递的报文，接收端怎么知道读了一个完整的包了？
+    19、内存泄漏和内存溢出，分别什么情况会导致。
+    20、time_wait说一下，为什么要time_wait
+    21、客户端处怎么减少time_wait状态数量（会答不上来）
+    22、 为什么要有内核态和用户态
+    23、内核态和用户态只是一个标志吗（应该是我上一个回答让他以为我认为这两中状态只是个标志）
+    24、32位和64位具体是哪里不同
+    25、进程和线程的区别
+    26、进程之间，线程之间的通讯方式
+    27、一个进程能够创建多少个线程（这个不知道。。）
+    28、类不同的类加载器加载同一个类，最后几种类，怎么判断这两个类是不一样的（这个我不太清楚。。我估计是方法区的标志不同）
+    29、spring中bean的生命周期
+    30、bean是什么时候消亡
+    31、怎么分析的慢sql（因为简历有写）
+    32、建立索引注意什么（我回答要在常用的字段上建立索引。balabala，他说你说的都是使用方面，我就不知道还能说啥了。。百度一下）
+    33、说项目最大的难点是什么？
+    34、为什么用redis
+    35、redis的容灾你怎么做？
+    36、redis的主从复制是怎么实现的
+    37，redis的主从复制是同步还是异步的？他们延时多少时间（这个延时时间我不知道。。难道还能设置吗。。）
+    38、算法题：从日志中提取了一份文件，一共有10亿个数据，每行记录代表，这个用户访问的记录，因此一个客户可以有多条记录。求出前10个访问最多次数的用户。我回答：先遍历一遍把每个用户的次数算出来，然后排序，时间复杂度就是O（n）
