客户端连接

--- a/docs/c-4.1操作系统.md
+++ b/docs/c-4.1操作系统.md
@@ -326,3 +326,7 @@ https://zhuanlan.zhihu.com/p/141602175
 - 地址转换：将程序中的逻辑地址转换成内存中的物理地址
 - 内存空间的扩充：利用虚拟存储技术，从逻辑上扩充内存
 - 存储保护：保证个个作业在自己的内存空间内运行，互不干扰
+
+
+# 一些计算组成原理
+- 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
