--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -246,6 +246,7 @@ ping命令使用的tcp报文还是udp报文呢？
 
 - 为什么程序不读入内存就无法运行？
     - 因为负责解析和运行程序内容的cpu是通过程序计数器来指定内存地址从而读出程序指令的。
+
     
 - 为什么cpu切换线程会耗费资源
     - 第一：
@@ -253,3 +254,8 @@ ping命令使用的tcp报文还是udp报文呢？
         - 线程切换状态会使CPU运行状态从用户态转换到内核态。
     - 第二：
         - 每个线程在运行时的指令是被放在CPU的寄存器中的，如果切换内存状态，需要先把本线程的代码和变量写入内存。这样经常切换会耗费时间。
+
+        
+- 客户端最多可以发起多少个连接？
+    - https://www.jianshu.com/p/c77e7026531a
+
