--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -672,3 +672,67 @@ https://zhuanlan.zhihu.com/p/48385127
 7.	多线程编程中如何避免死锁？
 8.	2进制转7进制
 9.	两个有序数组找中位数
+
+# 滴滴1-3面 9.1日
+滴滴1面
+1.	什么是分布式锁，为什么要用分布式锁？
+2.	Redis分布式锁怎么做？分布式锁具体有哪些参数？超时时间怎么设置合理？
+3.	什么是微服务架构？
+4.	为什么要有微服务？为什么要进行功能拆分？
+5.	说一说秒杀架构？
+6.	怎么防超卖? 怎么进行分段？
+7.	Innodb和mylsam的区别？
+8.	什么是事务？
+9.	为什么要有事务？
+10.	覆盖索引了解吗？
+11.	为什么要产生回表？
+12.	Ngnix进程模型是什么？
+13.	Nginx为什么性能高？
+14.	什么是epoll?
+15.	什么是面向对象？
+16.	为什么要设计面向对象这种概念？
+17.	我为什么要用多态？面向过程不好用吗？那为什么要有面向对象？
+18.	有哪些常见进程间通信？
+19.	什么是信号量？
+20.	算法：两个单链表，每个节点都是数字，求和。
+
+滴滴2面
+1. 长连接，短连接区别？
+2. 长连接的好处？、
+3. 长连接的缺点？
+占用资源？哪些资源？网络，操作系统，数据包区别？
+4. http2协议？
+5. 多路复用会同时处理多个请求吗？
+6. java相对于python的优势和特点？
+7. java动态代理了解吗？
+    - 就是AOP，装饰器，加日志，事务，权限控制等通用功能。
+8. 哈夫曼树解决了什么问题？
+9. A，B文件都有亿级别的url，找两个文件存在的共同的url。
+10. 写一个限流器，每秒只介绍1000个请求。
+
+滴滴3面
+1.	项目详情
+2.	介绍下微服务架构？
+3.	查 Access.log 中，统计出来访问量在top10的接口，有哪些，分别是多少？
+4.	汇总url_list, 并行打点，排序维护一个大根堆，并行去做。
+5.	多去了解，秒杀系统架构。应用层。 去了解底层原理第二层。日志系统怎么做的？互联网全貌了解一下。
+
+
+# 腾讯三面 9.1日
+1.	Redis mysql 缓存一致性问题
+2.	如何保证强一致性？
+3.	先删缓存还是先删数据库啊？？？
+4.	服务发现怎么做到的啊？？？服务发现的原理？
+https://blog.csdn.net/weixin_44801979/article/details/90550579?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.channel_param&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-2.channel_param
+zk做注册中心原理
+5.	数据库的四种隔离级别？
+6.	别慌，就慢慢说，他们有啥刁的。
+7.	有了MVVC为什么还需要next-key？
+8.	B+树在内存的模型
+https://blog.csdn.net/cyl937/article/details/53585007
+9． B+树有什么问题？
+10. 叶子节点的分裂是怎么回事？删除结构怎么调整？
+11. 当前服务器有多少网络连接？
+12. tcp的三次握手 四次挥手
+13. 四次挥手的状态
+14. 服务架构要拓宽下知识面了。
