--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -259,3 +259,11 @@ ping命令使用的tcp报文还是udp报文呢？
 - 客户端最多可以发起多少个连接？
     - https://www.jianshu.com/p/c77e7026531a
 
+        
+- rm后数据会立即删除吗？
+    - 不会，只有当一个文件的引用计数为0的时候，才可能被删除。 这种删除只是文件名到inode的链接删除了，但磁盘那块block数据还在。
+    - 程序本身忘记关闭文件句柄了，就会导致磁盘空间得不到释放。最终就是你认为删除了，但是磁盘空间还占用着。
+    
+- 查找出占用内存最大的进程的命令？
+    - ps aux --sort -rss | head
+
