--- a/docs/c-1计算机网络.md
+++ b/docs/c-1计算机网络.md
@@ -74,6 +74,10 @@
 - 15.TCP建立连接的时候connect()函数和accept()函数分别在三次握手第几次后返回（）
     - ![](figure/accepy.png)
     
+    
+- 16. TCP报文头都有什么？为什么可靠？
+    
+    
 # 2.bio nio select poll epoll
 - 阻塞io 就是说 accept 或者 receive的时候，如果客户端没准备好，那就会阻塞住。所以需要 一个客户端对应一个线程去处理。  
 
