--- a/docs/c-1计算机网络.md
+++ b/docs/c-1计算机网络.md
@@ -259,7 +259,10 @@ int main() {
 
 - epoll怎么判断数据读取完毕
     - TCP和UDP都适用。将socket设成NONBLOCK（使用fcntl函数），然后select到该socket可读之后，使用read/recv来读取数据。当函数返回-1，同时errno是EAGAIN或EWOULDBLOCK的时候，表示数据已经全部读取完毕。
-
+- epoll服务端代码例子
+    - https://www.cnblogs.com/xuewangkai/p/11158576.html
+- linux read write socket文件句柄
+    - http://c.biancheng.net/view/2346.html
 # 3. HTTP1.0 1.1 2.0的区别
 ## 3.1HTTP1.0 HTTP 1.1主要区别
 （1）长连接
