--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -673,6 +673,34 @@ https://zhuanlan.zhihu.com/p/48385127
 8.	2进制转7进制
 9.	两个有序数组找中位数
 
+# shopee新加坡2面 9.4日 10.30
+1. 
+   1 1 0 1
+    
+   0 0 1 1
+    
+   0 1 0 1
+
+    找出找个二维数组中所有的矩形， 比如2*2的二维数组
+    
+    1 1
+    
+    1 1
+    这里存在9个矩形
+
+2. 消息队列在系统中的作用
+    - 削锋 异步 解耦
+3. kafka的相关问题
+    - kafka返回对象future 然后再操作？
+    - kafka如何实现 发布订阅？ kafka如何实现多个消费者去消费一条消息？
+    - kafka被一个消费者消费后就不存在了吗？
+    - offset指的是什么？
+4. 操作系统里读写锁的作用以及工作原理？怎么实现的？
+5. tcp最大连接数目？
+    - https://www.cnblogs.com/shengs/p/10140678.html
+6. http多路复用和pipelining的区别？
+    - https://blog.csdn.net/sd19871122/article/details/106908140
+
 # 滴滴1-3面 9.1日
 滴滴1面
 1.	什么是分布式锁，为什么要用分布式锁？
@@ -736,3 +764,29 @@ https://blog.csdn.net/cyl937/article/details/53585007
 12. tcp的三次握手 四次挥手
 13. 四次挥手的状态
 14. 服务架构要拓宽下知识面了。
+
+
+# 京东1-2面 9.2 9.3
+1. java有几种引用类型？
+2. 重载和重写的区别？
+3. java的锁 Synchnized
+4. JVM内存模型，String s = new String("abc") 在jvm的区域如何分配？
+5. JVM垃圾回收，怎么判定某些对象需要回收？
+6. 哪些对象可以做为gc root？
+7. 线程池的几种参数？
+8. 一个对象占多大内存？如何计算？
+9. 设计模式有了解吗？ 单例，策略，工厂
+10. 类加载器有了解吗？
+11. new ArrayList的默认长度？
+12. HashMap的红黑树 节点数量到多少会回退成链表？
+13. 索引越多越好吗？
+
+1. 计数器 token限流器 漏斗的区别
+2. 写一个令牌桶算法， 一个令牌生产一个令牌消费
+3. ABC三个线程顺序打印，如何控制顺序？
+    - 信号量  和 Reetranlock？
+4. ThreadLocal会导致内存泄漏吗？
+5. Java弱引用 软引用 ThreadLocal map里用的是什么引用？
+6. HashMap  new一个HashMap(100)， 放100个元素的时候会不会扩容？
+7. 数组里元素无序，找出一个数，找个数不在找个数组里，并且是最小的正整数。
+
