--- a/docs/c-1计算机网络.md
+++ b/docs/c-1计算机网络.md
@@ -263,6 +263,28 @@ int main() {
     - https://www.cnblogs.com/xuewangkai/p/11158576.html
 - linux read write socket文件句柄
     - http://c.biancheng.net/view/2346.html
+    - https://www.cnblogs.com/yc3110/p/10440613.html  用户缓冲区和内核缓冲区
+- 缓冲区和缓存的区别？
+    - 缓冲区 buffer，是为了减少系统调用次数。
+        - read是把数据从内核缓冲区复制到进程缓冲区。write是把进程缓冲区复制到内核缓冲区。当然，write并不一定导致内核的写动作，比如os可能会把内核缓冲区的数据积累到一定量后，再一次写入。
+    - cpu 缓存 cache，是位于cpu和内存间的临时存储器，cpu的计算速度要比内存的读写速度快很多，而把这些可能会被重复访问到的数据存储于cpu缓存中，就会提高读取速度。
+
+- socket文件描述符
+    - http://c.biancheng.net/view/2123.html
+- socket收发缓冲区
+    - https://blog.csdn.net/ldw662523/article/details/79540507?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.channel_param&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-1.channel_param
+    - https://blog.csdn.net/bobozai86/article/details/80605643
+- socket网络传输数据流
+    - https://blog.csdn.net/yusiguyuan/article/details/28625129
+    
+    - 整个数据的流程中，首先网卡接收到的数据存放到内核缓冲区内，然后内核缓冲区存放的数据根据TCP信息将数据移动到具体的某一个TCP连接上的接收缓冲区内，也就是接收滑动窗口内，然后应用程序从TCP的接受缓冲区内读取数据，如果应用程序一直不读取，那么滑动窗口就会变小，直至为0.
+    - 如果网卡处理数据的速度比内核处理数据的速度慢，那么内核会有一个队列来保存这些数据，这个队列的大小就是由参数netdev_max_backlog决定的
+
+    - 对于发送数据来说，应用程序将数据拷贝到各自TCP发送缓冲区内（也就是发送滑动窗口），然后系统的所有TCP套接字上发送缓冲区（也就是发送滑动窗口）内的数据都将数据拷贝到内核发送缓冲区内，然后内核将内核缓冲区的数据经过网卡发送出去。
+
+    - TCP的发送/接受缓冲区（也就是发送/接受滑动窗口），是针对某一个具体的TCP连接来说的，每一个TCP连接都会有相应的滑动窗口，但是内核的发送/接受缓冲区是针对整个系统的，里面存放着整个系统的所有TCP连接的接收/发送的数据。
+- socket技术详解
+    - https://www.jianshu.com/p/066d99da7cbd
 # 3. HTTP1.0 1.1 2.0的区别
 ## 3.1HTTP1.0 HTTP 1.1主要区别
 （1）长连接
