--- a/docs/c-4.1操作系统.md
+++ b/docs/c-4.1操作系统.md
@@ -327,6 +327,14 @@ https://zhuanlan.zhihu.com/p/141602175
 - 内存空间的扩充：利用虚拟存储技术，从逻辑上扩充内存
 - 存储保护：保证个个作业在自己的内存空间内运行，互不干扰
 
+# 17. linux下文件系统的硬链接与软链接
+- https://www.cnblogs.com/xiaochaohuashengmi/archive/2011/10/05/2199534.html
+
 
 # 一些计算组成原理
 - 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
+
+
+# 硬核操作系统
+- 文件系统
+    - https://mp.weixin.qq.com/s?__biz=MzU2NDg0OTgyMA==&mid=2247485927&idx=1&sn=a05bd80ed7147ed9b66be3807747c450&chksm=fc45f414cb327d02af3b615570270907f3cb9042819bee232ac52ec141d1897790dcdcf7eab1&token=1981249032&lang=zh_CN#rd
