--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -261,7 +261,8 @@ ping命令使用的tcp报文还是udp报文呢？
 
         
 - rm后数据会立即删除吗？
-    - 不会，只有当一个文件的引用计数为0的时候，才可能被删除。 这种删除只是文件名到inode的链接删除了，但磁盘那块block数据还在。
+    - 不会，只有当一个文件的链接数为0的时候，才可能被删除。 这种删除只是文件名到inode的链接删除了，但磁盘那块block数据还在。
+    - 比如硬链接的话，其实就是俩文件名指向同一个文件。inode和block都是一个。这时候删除其中一个文件，那文件还是存在的。只是那个文件名，的这个链接删除了。
     - 程序本身忘记关闭文件句柄了，就会导致磁盘空间得不到释放。最终就是你认为删除了，但是磁盘空间还占用着。
     
 - 查找出占用内存最大的进程的命令？
