--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -695,6 +695,19 @@ https://zhuanlan.zhihu.com/p/48385127
     - kafka如何实现 发布订阅？ kafka如何实现多个消费者去消费一条消息？
     - kafka被一个消费者消费后就不存在了吗？
     - offset指的是什么？
+    - ![](figure/kafka1.png)
+    - 在partition中如何通过offset查找message？
+        - ![](figure/offset1.png)
+        - ![](figure/offset.png)
+        - .index索引文件存储大量的元数据，.log数据文件存储大量的消息，索引文件中的元数据指向对应数据文件中message的物理偏移地址(也就是实际的偏移地址，因为会涉及到segment文件清理)。其中以.index索引文件中的元数据[3, 348]为例，在.log数据文件表示第3个消息，即在全局partition中offset为170410+3=170413，该消息的物理偏移地址为348。
+    
+    - 为什么kafka使用磁盘而不是内存?
+        - 磁盘缓存由Linux系统维护，减少了程序员的不少工作。
+        - 磁盘顺序读写速度超过内存随机读写。
+        - JVM的GC效率低，内存占用大。使用磁盘可以避免这一问题。
+        
+        - 系统冷启动后，磁盘缓存依然可用。
+    - 因为硬盘是机械结构，每次读写都会寻址->写入，其中寻址是一个“机械动作”，它是最耗时的。所以硬盘最讨厌随机I/O，最喜欢顺序I/O。为了提高读写硬盘的速度，Kafka就是使用顺序I/O。
 4. 操作系统里读写锁的作用以及工作原理？怎么实现的？
 5. tcp最大连接数目？
     - https://www.cnblogs.com/shengs/p/10140678.html
@@ -789,4 +802,31 @@ https://blog.csdn.net/cyl937/article/details/53585007
 5. Java弱引用 软引用 ThreadLocal map里用的是什么引用？
 6. HashMap  new一个HashMap(100)， 放100个元素的时候会不会扩容？
 7. 数组里元素无序，找出一个数，找个数不在找个数组里，并且是最小的正整数。
+
+# 腾讯tem1面
+1. 红黑树和有序数组查找的区别？ 在内存中存储的区别？
+    - 查找差不多，log2n， 插入的话有序数组是O（n），红黑树还是logn
+    - 链式存储结构的存储空间在逻辑上是连续的，但是在物理上是离散的；而顺序存储结构的存储空间在逻辑上是连续的，在物理上也是连续的。
+    - https://blog.csdn.net/junruitian/article/details/54092040
+2. 什么是页表？ 进程地址空间怎么回事？ 
+3. 读磁盘的过程？ 从磁盘读进来在内存中怎么存储？
+4. 看端口？看网络连接？看磁盘io？
+5. 命令行启动程序  如何找到main函数的？
+6. 操作系统的内存，代码段  放在哪里？ 数据啥的都放在操作系统内存哪里？
+    - 什么是代码区、常量区、静态区（全局区）、堆区、栈区？
+    - https://blog.csdn.net/u014470361/article/details/79297601  
+    - 类加载和方法区?
+        - https://www.jianshu.com/p/4797c3373a29       
+7. 为什么常量池中有 还要在堆中 new一个 abc？
+8. java在方法里创建了一个100M的对象，局部变量，可以吗？
+    - 局部变量，不可以，栈溢出。 但是java里面，其实创建的对象都是在堆里，局部变量只是那个堆对象的引用。
+    - 所以一半java栈溢出，都是递归搞的。 堆溢出，可能是对象太大了。
+8. 加上static的变量和方法放在内存的哪里了？
+    - 方法区包含所有的class和static变量。
+    - 方法区中包含的都是在整个程序中永远唯一的元素，如class，static变量。
+8. 处理粘包？
+8. redis集群问题？
+9. time-wait出现在哪个语句后？
+10. 单例模式双重校验锁，判断一次为none可以吗？为什么要判断两次？
+11. 快排非递归写法
 
