--- a/docs/c-4.1操作系统.md
+++ b/docs/c-4.1操作系统.md
@@ -331,6 +331,9 @@ https://zhuanlan.zhihu.com/p/141602175
 - https://www.cnblogs.com/xiaochaohuashengmi/archive/2011/10/05/2199534.html
 
 
+# 18. 磁盘和内存的读写原理？
+- https://blog.csdn.net/zhanghongzheng3213/article/details/54141202
+
 # 一些计算组成原理
 - 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
 
