--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -811,6 +811,7 @@ https://blog.csdn.net/cyl937/article/details/53585007
 2. 什么是页表？ 进程地址空间怎么回事？ 
 3. 读磁盘的过程？ 从磁盘读进来在内存中怎么存储？
 4. 看端口？看网络连接？看磁盘io？
+    - netstat -ant ,  iostat
 5. 命令行启动程序  如何找到main函数的？
 6. 操作系统的内存，代码段  放在哪里？ 数据啥的都放在操作系统内存哪里？
     - 什么是代码区、常量区、静态区（全局区）、堆区、栈区？
@@ -818,6 +819,7 @@ https://blog.csdn.net/cyl937/article/details/53585007
     - 类加载和方法区?
         - https://www.jianshu.com/p/4797c3373a29       
 7. 为什么常量池中有 还要在堆中 new一个 abc？
+    - 那为什么要有常量池呢？因为它可以节省时间和空间，当需要一个对象的时候，可以直接从常量池中获取，而不需要重新创建，这样也就节省了时间和空间。
 8. java在方法里创建了一个100M的对象，局部变量，可以吗？
     - 局部变量，不可以，栈溢出。 但是java里面，其实创建的对象都是在堆里，局部变量只是那个堆对象的引用。
     - 所以一半java栈溢出，都是递归搞的。 堆溢出，可能是对象太大了。
@@ -828,5 +830,15 @@ https://blog.csdn.net/cyl937/article/details/53585007
 8. redis集群问题？
 9. time-wait出现在哪个语句后？
 10. 单例模式双重校验锁，判断一次为none可以吗？为什么要判断两次？
+    ```java 
+            if (uniqueInstance == null) {
+                //类对象加锁
+                synchronized (MySingleton.class) {
+                    if (uniqueInstance == null) {
+                        uniqueInstance = new MySingleton();
+                    }
+                }
+            }
+    ```
 11. 快排非递归写法
 
