--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -268,3 +268,8 @@ ping命令使用的tcp报文还是udp报文呢？
 - 查找出占用内存最大的进程的命令？
     - ps aux --sort -rss | head
 
+- 两个进程读写同一个文件？
+    - https://blog.csdn.net/weibo1230123/article/details/83045458?utm_medium=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-6.channel_param&depth_1-utm_source=distribute.pc_relevant.none-task-blog-BlogCommendFromMachineLearnPai2-6.channel_param
+    
+- 编译器编译成啥？
+    - ![](figure/编译原理.png)
