update lesson bilibili

--- a/docs/c-4.1操作系统.md
+++ b/docs/c-4.1操作系统.md
@@ -344,3 +344,6 @@ https://zhuanlan.zhihu.com/p/141602175
     
     
 # 操作系统_清华大学(向勇、陈渝)
+
+9.14日 https://www.bilibili.com/video/BV1js411b7vg?p=24  虚拟内存看完了 待做笔记
+https://www.bilibili.com/video/BV1ix41137Eu?p=2  计算机组成原理 建模之后再看
