--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -714,6 +714,15 @@ https://zhuanlan.zhihu.com/p/48385127
 6. http多路复用和pipelining的区别？
     - https://blog.csdn.net/sd19871122/article/details/106908140
 
+# shopee3面 9.18日
+1. 狂问项目
+2. 项目技术上比较复杂的场景？
+3. 为什么用kafka？
+4. 微服务在项目中如何体现的？设计到到系统用到了多少微服务？微服务之间通信用什么协议？
+5. 秒杀系统场景哪儿比较难？
+6. 短连接生成器？  怎么做？？？   出现哈希冲突了怎么办？
+7. 数据不一致问题如何解决？
+
 # 滴滴1-3面 9.1日
 滴滴1面
 1.	什么是分布式锁，为什么要用分布式锁？
@@ -842,3 +851,27 @@ https://blog.csdn.net/cyl937/article/details/53585007
     ```
 11. 快排非递归写法
 
+# 腾讯csig 1-2面 9.15日
+1. 项目 你做了啥？？？
+2. redis mysql数据一致性如何做到？
+3. scroll查询，怎么关联的？怎么根据前一个查询结果查询下一个？
+4. java泛形了解吗？
+5. String StringBuffer StringBuilder的区别？
+6. java实例化一个java对象 实例化的过程是怎么样的？
+7. java jvm内存区域？
+8. 执行一个java程序，调用不同方法，执行过程中，这些内存区域会有什么变化呢？
+9. java的垃圾回收机制？ gc root都有哪些？
+10. 了解的数据结构，树，堆，数组，链表。
+11. http包的结构？网络通讯的步骤？
+12. 对外提供服务，如何做安全性的防范？
+13. 怎么衡量不同公司的offer呢？
+
+二面
+1. 你在项目中遇到的难点？
+2. nginx的反向代理？ 以及轮训算法？
+3. 了解哪些锁？java中的悲观锁和乐观锁？
+4. 自旋锁知道吗？
+5. 面向对象了解吗？
+6. 抽象类主要用来做什么？
+7. redis mysql数据不一致问题？
+8. coding 逆序对
