--- a/docs/c-4.1操作系统.md
+++ b/docs/c-4.1操作系统.md
@@ -334,6 +334,32 @@ https://zhuanlan.zhihu.com/p/141602175
 # 18. 磁盘和内存的读写原理？
 - https://blog.csdn.net/zhanghongzheng3213/article/details/54141202
 
+# 19. inode和block
+- https://cloud.tencent.com/developer/article/1409862
+- https://www.cnblogs.com/thinksasa/archive/2013/04/10/3013445.html
+- https://blog.csdn.net/Evan_Sone/article/details/82187479
+
+# 20. inode和fd
+- inode是存这个文件的信息，如文件都在哪些block上
+- fd是对每一个打开的进程，单独的东西，记录文件偏移量啥啥的。
+
+- inode 或i节点是指对文件的索引。如一个系统，所有文件是放在磁盘或flash上，就要编个目录来说明每个文件在什么地方，有什么属性，及大小等。就像书本的目录一样，便于查找和管理。这目录是操作系统需要的，用来找文件或叫管理文件。许多操作系统都用到这个概念，如linux， 某些嵌入式文件系统等。当然，对某个系统来说，有许多i节点。所以对i节点本身也是要进行管理的。
+
+- 在linux中，内核通过inode来找到每个文件，但一个文件可以被许多用户同时打开或一个用户同时打开多次。这就有一个问题，如何管理文件的当前位移量，因为可能每个用户打开文件后进行的操作都不一样，这样文件位移量也不同，当然还有其他的一些问题。所以linux又搞了一个文件描述符（file descriptor）这个东西，来分别为每一个用户服务。每个用户每次打开一个文件，就产生一个文件描述符，多次打开就产生多个文件描述符，一一对应，不管是同一个用户，还是多个用户。该文件描述符就记录了当前打开的文件的偏移量等数据。所以一个i节点可以有0个或多个文件描述符。多个文件描述符可以对应一个i节点。
+
+
+# 20. 进程表/文件表/inode/vnode
+- https://www.cnblogs.com/zhaoyl/archive/2012/05/15/2502010.html
+- https://www.cnblogs.com/smartjourneys/p/7260911.html
+
+# 20. 文件描述符和打开文件之间的关系
+- https://www.cnblogs.com/ginvip/p/6350222.html
+
+# 20. 如何通过文件名找到磁盘上的数据的？
+- 每个inode都有一个号码，操作系统用inode号码来识别不同的文件。
+
+- 这里值得重复一遍，Unix/Linux系统内部不使用文件名，而使用inode号码来识别文件。对于系统来说，文件名只是inode号码便于识别的别称或者绰号。表面上，用户通过文件名，打开文件。实际上，系统内部这个过程分成三步：首先，系统找到这个文件名对应的inode号码；其次，通过inode号码，获取inode信息；最后，根据inode信息，找到文件数据所在的block，读出数据。
+
 # 一些计算组成原理
 - 本地代码需要加载进内存才可以运行，内存中存储着构成本地代码的指令和数据。程序运行时，CPU从内存中将指令和数据读出来，然后放在CPU内部的寄存器中进行处理。
 
