--- a/docs/我的面经.md
+++ b/docs/我的面经.md
@@ -823,6 +823,7 @@ https://blog.csdn.net/cyl937/article/details/53585007
     - netstat -ant ,  iostat
 5. 命令行启动程序  如何找到main函数的？
 6. 操作系统的内存，代码段  放在哪里？ 数据啥的都放在操作系统内存哪里？
+    - https://blog.csdn.net/yoxiyehei_wzx/article/details/51260143
     - 什么是代码区、常量区、静态区（全局区）、堆区、栈区？
     - https://blog.csdn.net/u014470361/article/details/79297601  
     - 类加载和方法区?
@@ -850,6 +851,7 @@ https://blog.csdn.net/cyl937/article/details/53585007
             }
     ```
 11. 快排非递归写法
+12. 100本书 每人一次只能拿一到5本，怎么保证你拿到最后一本，你先拿。
 
 # 腾讯csig 1-2面 9.15日
 1. 项目 你做了啥？？？
@@ -874,4 +876,30 @@ https://blog.csdn.net/cyl937/article/details/53585007
 5. 面向对象了解吗？
 6. 抽象类主要用来做什么？
 7. redis mysql数据不一致问题？
+    - https://www.cnblogs.com/rude3knife/p/13612870.html
 8. coding 逆序对
+
+三面 9.23号
+1. 
+```python
+    for i in range(100):
+       for i in range(100000000):
+           print()
+    for i in range(100000000):
+       for i in range(100):
+           print()
+    # 这两个哪个快？
+```
+
+2. 自己的职业规划是怎么样呢？
+3. 为什么没有去走本专业呢？而是转互联网了呢？
+4. 对做的项目的整个架构理解
+5. kafka组件的了解程度？
+6. kafka的架构？
+7. kafka落磁盘，为什么快？
+8. 为什么kafka能实现没有用户态到内核态的转换呢？
+9. 如果生产者过剩，把磁盘写满了，这种情况如何容灾？
+10. 这俩段经历对我来说的挑战以及成长？
+11. epoll select
+12. 为什么map要用红黑树作为数据结构呢？
+13. 二分查找为什么是logn复杂度。
