--- a/docs/知识点杂记.md
+++ b/docs/知识点杂记.md
@@ -276,3 +276,6 @@ ping命令使用的tcp报文还是udp报文呢？
 
 - 编译器编译成啥？
     - ![](figure/编译原理.png)
+    
+- mmap映射区和shm共享内存的区别总结？
+    - https://blog.csdn.net/hj605635529/article/details/73163513
